--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "vitepress": "^1.6.3"
   },
   "scripts": {
-    "docs:dev": "vitepress dev",
-    "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "docs:dev": "ChocolateMC-docs",
+    "docs:build": "ChocolateMC-docs",
+    "docs:preview": "ChocolateMC-docs"
   }
 }
